--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.7.7",
     "infinite-scroll": "^4.0.1",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.7"
+    "notiflix": "^3.2.7",
+    "simplelightbox": "^2.14.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
